<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/infinity_backdrop"
        android:orientation="vertical"
        android:padding="@dimen/padding">


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="75dp"
            android:layout_margin="@dimen/padding"
            android:contentDescription="@string/avengers_text_logo"
            android:src="@drawable/avengers_infinity_war_logo" />

        <android.support.v7.widget.CardView
            android:layout_width="@dimen/image_width"
            android:layout_height="@dimen/image_height"
            android:layout_gravity="center"
            app:cardCornerRadius="@dimen/corner"
            app:cardElevation="@dimen/card_elevation">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/infinity"
                android:scaleType="fitXY"
                android:src="@drawable/infinity" />

        </android.support.v7.widget.CardView>


        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/padding">

            <ImageView
                android:id="@+id/play_store"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:contentDescription="@string/google_play"
                android:scaleType="fitXY"
                android:src="@drawable/ic_get_it_on_play_store" />

            <ImageView
                android:id="@+id/app_store"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:contentDescription="@string/app_store"
                android:paddingVertical="@dimen/padding"
                android:scaleType="fitXY"
                android:src="@drawable/ic_available_on_the_app_store" />

        </LinearLayout>


    </LinearLayout>

</RelativeLayout>