<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_red"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/last"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding"
                android:fontFamily="@font/kalam_bold"
                android:gravity="center"
                android:padding="@dimen/padding"
                android:text="@string/download_now"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_download" />

        </com.facebook.shimmer.ShimmerFrameLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/play_store1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/download_image_height"
            android:layout_gravity="center"
            android:contentDescription="@string/google_play"
            android:scaleType="fitXY"
            android:src="@drawable/ic_get_it_on_play_store" />

        <ImageView
            android:id="@+id/app_store1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/download_image_height"
            android:layout_gravity="center"
            android:contentDescription="@string/app_store"
            android:padding="@dimen/padding_app_store"
            android:scaleType="fitXY"
            android:src="@drawable/ic_available_on_the_app_store" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/last1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/padding"
                android:fontFamily="@font/kalam_light"
                android:gravity="center"
                android:padding="@dimen/padding"
                android:text="@string/lorem_ipsum"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_end"
                android:textStyle="bold" />

        </com.facebook.shimmer.ShimmerFrameLayout>

    </LinearLayout>


</LinearLayout>